# add-ed

./: BEHAVIOUR.md  COMMANDS.md  COMMANDS_SHORT.md  Cargo.toml  POTENTIAL_FEATURES.md  README.md  RELEASE_NOTES.md  TODOS.md  test  test.sh  to_test.md
.github/workflows/: rust.yml
fuzz/: Cargo.toml  fuzz.rs
src/: error_consts.rs  history.rs  lib.rs  macros.rs  main.rs  messages.rs  todo.md
src/buffer/: buffer.rs  editing.rs  file.rs  finding.rs  history.rs  iters.rs  line.rs  mod.rs  substitute.rs  test.rs  todo.md  undo.rs  verify.rs
src/buffer/vecbuffer/: mod.rs  test.rs.disabled
src/cmd/: commands.rs  editing_commands.rs  io_commands.rs  mod.rs  parse_expressions.rs  parse_flags.rs  parse_path.rs  parse_selection.rs  regex_commands.rs  undo.rs
src/cmd/editing_commands/: change.rs  copy.rs  cut.rs  input.rs  join.rs  mod.rs  paste.rs  reflow.rs  scroll.rs  tag.rs  transfer.rs
src/cmd/io_commands/: file.rs  mod.rs  shell.rs
src/cmd/parsing/: buffer_helpers.rs  expression.rs  flags.rs  mod.rs  path.rs  selection.rs
src/cmd/regex_commands/: global.rs  mod.rs  substitute.rs
src/editor/: error_consts.rs  mod.rs
src/editor/buffer/: file.rs  mod.rs
src/editor/buffer/vecbuffer/: mod.rs  test.rs
src/editor/cmd/: mod.rs  new.parse_selection.rs  old.parse_selection.rs  parse_selection.rs
src/editor/ui/: mod.rs
src/editor/ui/classic_ui/: mod.rs
src/editor/ui/cli_ui/: mod.rs
src/editor/ui/dummy_ui/: mod.rs
src/error/: display.rs  execution.rs  internal.rs  mod.rs  parsing.rs  partialeq.rs
src/io/: dummy_io.rs  fake_io.rs  local_io.rs  mod.rs  test.rs  test_helpers.rs
src/io/local_io/: error.rs  mod.rs  test.rs
src/old_buffer/: GOTCHAS.md  editing.rs  finding.rs  mod.rs  substitute.rs  verify.rs
src/ui/: dummy_ui.rs  lock.rs  mock_ui.rs  mod.rs  scripted_ui.rs
tests/: README.md  a.rs  aggregator_ui.rs  base_test.rs.template  c.rs  colon.rs  d.rs  default_command.rs  e.rs  editing_commands.rs  editing_commands.rs.off  equals.rs  exclamation.rs  f.rs  g.rs  h.rs  i.rs  j.rs  join.rs  k.rs  l.rs  m.rs  macro.rs  mock_io.rs  n.rs  octothorpe.rs  old_fuss_fails.rs  p.rs  pipe.rs  printing.rs  q.rs  r.rs  regex_commands.rs  regex_indices.rs  s.rs  selection.rs  selection_handling.rs  t.rs  u.rs  undo.rs  (+5 more)
tests/old/: aggregator_ui.rs  editing_commands.rs  selection_handling.rs
tests/shared/: dummy_io.rs  dummy_ui.rs  fake_io.rs  fixtures.rs  inner_fixture.rs  mock_ui.rs  mod.rs
