[package]
name = "add-ed"
description = "Embeddable pure rust editor based on ED"
version = "0.10.0"
repository = "https://github.com/sidju/add-ed"
readme = "README.md"
categories = ["text-editors"]
keywords = ["ed"]
authors = ["sidju <contact@sidju.se>"]
license = "MIT"
edition = "2021"

include = [
  "assets/*",
  "**/*.rs",
  "Cargo.toml",
]

[features]
local_io = []
test_local_io = ["local_io"]
initial_input_data = []
default = ["local_io"]
testing = [] # Build and export testing structs
bin_deps = ["clap", "local_io"]

[dependencies]
regex = "1"
# Only used when building the `classic` binary
clap = { version = "4", features = ["derive", "env"], optional = true }

[[bin]]
name = "classic-ed"
required-features = ["bin_deps"]
