[package]
name = "add-ed"
description = "Embeddable pure rust editor based on ED"
version = "0.14.0"
repository = "https://github.com/sidju/add-ed"
readme = "README.md"
categories = ["text-editors"]
keywords = ["ed"]
authors = ["sidju <contact@sidju.se>"]
license = "MIT"
edition = "2021"

include = [
  "assets/*",
  "**/*.rs",
  "Cargo.toml",
  "COMMANDS.md",
  "COMMANDS_SHORT.md",
  "LICENSE.txt"
]

[features]
local_io = []
test_local_io = ["local_io"]
initial_input_data = []
serde = ["dep:serde"] # Currently only for Macro struct
default = ["local_io"]
bin_deps = ["dep:clap", "local_io"]

[dependencies]
regex = "1"
# Used in the IOError and UIError traits for better downcasting ergonomy
as-any = "0.3"
# Only used when building the `classic` binary
clap = { version = "4", features = ["derive", "env"], optional = true }
# For the serde feature. Leave the version choice to the user, as much
# as possible, as it will need to match whatever use-case they have
serde = { version = "1", features = ["derive"], optional = true }

[[bin]]
name = "classic-ed"
required-features = ["bin_deps"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
